--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^5.0.6"
+    "mongoose": "^5.0.6",
+    "swagger-express-mw": "^0.7.0",
+    "swagger-ui-express": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
